<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.deka.royale.examples</groupId>
  <artifactId>CairngormServer</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>

  <name>CairngormServer Maven Webapp</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
		<blazeds.version>3.0.0.544</blazeds.version>		
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <dependency>
		    <groupId>commons-httpclient</groupId>
		    <artifactId>commons-httpclient</artifactId>
		    <version>3.0.1</version>
		</dependency>			

      <!--  BLAZEDS -->
          
      <dependency>
          <groupId>com.adobe.blazeds</groupId>
          <artifactId>blazeds-core</artifactId>
          <version>${blazeds.version}</version>
      </dependency>
      
      <dependency>
          <groupId>com.adobe.blazeds</groupId>
          <artifactId>blazeds-common</artifactId>
          <version>${blazeds.version}</version>
      </dependency>
      
      <dependency>
          <groupId>com.adobe.blazeds</groupId>
          <artifactId>blazeds-remoting</artifactId>
          <version>${blazeds.version}</version>
      </dependency>
      
      <dependency>
          <groupId>com.adobe.blazeds</groupId>
          <artifactId>blazeds-proxy</artifactId>
          <version>${blazeds.version}</version>
      </dependency>
      
      <dependency>
          <groupId>com.adobe.blazeds</groupId>
          <artifactId>blazeds-opt</artifactId>
          <version>${blazeds.version}</version>
      </dependency>
  </dependencies>

  <build>
  
    <finalName>CairngormServer</finalName>

    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>

        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
          <configuration>
                <outputDirectory>${project.build.directory}/tomcat/webapps</outputDirectory>
          </configuration>
        </plugin>
<!--
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.2</version>
          <configuration>
            <target>1.6</target>
            <debug>true</debug>
            

            <webResources>
              <resource>
                <directory>../Cairngorm/target/bin/js-debug</directory>
              </resource>
              <resource>
                  <directory>${basedir}/src/main/webapp/WEB-INF</directory>
                  <filtering>true</filtering>
                  <targetPath>WEB-INF</targetPath>
                  <includes>
                      <include>**/*html</include>
                  </includes>
              </resource>
          </webResources>
        </configuration>
        </plugin>
 -->
        <plugin>
          <groupId>org.apache.tomcat.maven</groupId>
          <artifactId>tomcat7-maven-plugin</artifactId>
          <version>2.2</version>
          <configuration>
              <path>/${project.build.finalName}</path>
              <port>8080</port>
              <contextReloadable>true</contextReloadable>
              <systemProperties>
                  <JAVA_OPTS>-Xms256m -Xmx1024m -XX:+DisableExplicitGC -Dcom.sun.management.jmxremote -XX:PermSize=256m -XX:MaxPermSize=512m</JAVA_OPTS>
                  <MAVEN_OPTS>-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</MAVEN_OPTS>
              </systemProperties>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
